# Administrador-de-Tareas

./: CMakeLists.txt  README.md  main.cpp
src/: ProcessManager.h  killProcess.cpp  listingProcess.cpp  main.cpp  processCreate.cpp
src/core/: killProcess.cpp  listingProcess.cpp  processCreate.cpp
